# RYBELLA

./: .dockerignore  .gitignore  LOCAL_DEV.md  README.md  _run_admin.bat  _run_backend.bat  deploy.sh  docker-compose.yml  docker-deploy.md  launch_admin.js  launch_backend.js  package-lock.json  package.json  reset-admin.bat  revert-to-github.bat  run-backend.bat  run-seed.bat  run.js  start-admin-local.bat  start-admin.bat  start-all.bat  start-backend.bat  start.ps1  التشغيل-المحلي.md  تسجيل-الدخول.txt
admin-dashboard/: .env.desktop  .env.production  DESKTOP.md  index.html  package-lock.json  package.json  vite.config.js
admin-dashboard/src-tauri/: Cargo.toml  tauri.conf.json
admin-dashboard/src-tauri/capabilities/: default.json
admin-dashboard/src-tauri/icons/: icon.icns
admin-dashboard/src-tauri/src/: main.rs
backend/: .env.example  package-lock.json  package.json  server.js
database/: run-seed.js  schema.sql  seed.sql
delivery-system/: .env.example  Caddyfile  README.md  docker-compose.yml
deployment/: .env.example  DOMAIN-rybellairaq.com.md  README.md  admin.Dockerfile  backend.Dockerfile  check-backups.sh  deploy.sh  diagnose.sh  docker-compose.yml  docker-up.bat  install-watchdog.sh  nginx-delivery-rybellairaq.conf  nginx-host-admin-rybellairaq.conf  nginx-host-rybellairaq.conf  nginx-webstore.conf  nginx.conf  setup-swap.sh  storefront-premium.Dockerfile  watchdog.sh  web-store.Dockerfile  اول-رفع.md
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md  POS-DISCOUNT-FIX.md
mobile-app/: .env.example  App.js  BUILD_APK.md  app.json  build-apk-local.bat  (+2 more)
(+375 files in other folders)
