[package]
name = "rybella-admin"
version = "1.0.0"
description = "Rybella Admin Desktop"
authors = ["Rybella"]
edition = "2021"

[lib]
name = "rybella_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
